--- a/templates/dynamic-dns/template.yaml
+++ b/templates/dynamic-dns/template.yaml
@@ -63,6 +63,7 @@ Resources:
   # Lambda function to update DNS
   UpdateFunction:
     Type: AWS::Lambda::Function
+    DependsOn: UpdateFunctionLogGroup
     Properties:
       FunctionName: !Sub '${AWS::StackName}-updater'
       Runtime: python3.12
@@ -81,44 +82,82 @@ Resources:
           import os
 
           def handler(event, context):
-              # Get the token from the path
+              source_ip = event['requestContext']['http']['sourceIp']
               path_token = event.get('pathParameters', {}).get('token', '')
 
               # Validate token
               if path_token != os.environ['AUTH_TOKEN']:
+                  print(f"AUTH_FAILED ip={source_ip}")
                   return {
                       'statusCode': 403,
                       'body': json.dumps({'error': 'Invalid token'})
                   }
 
-              # Get caller's IP from API Gateway
-              source_ip = event['requestContext']['http']['sourceIp']
+              route53 = boto3.client('route53')
+              record_name = os.environ['RECORD_NAME']
+              zone_id = os.environ['HOSTED_ZONE_ID']
+
+              # Get current IP from Route 53
+              try:
+                  resp = route53.list_resource_record_sets(
+                      HostedZoneId=zone_id,
+                      StartRecordName=record_name,
+                      StartRecordType='A',
+                      MaxItems='1'
+                  )
+                  records = resp.get('ResourceRecordSets', [])
+                  current_ip = None
+                  if records and records[0]['Name'].rstrip('.') == record_name.rstrip('.'):
+                      current_ip = records[0]['ResourceRecords'][0]['Value']
+              except Exception:
+                  current_ip = None
+
+              # Skip update if IP unchanged
+              if current_ip == source_ip:
+                  return {
+                      'statusCode': 200,
+                      'body': json.dumps({'message': 'No change', 'ip': source_ip})
+                  }
 
               # Update Route 53
-              route53 = boto3.client('route53')
-              response = route53.change_resource_record_sets(
-                  HostedZoneId=os.environ['HOSTED_ZONE_ID'],
-                  ChangeBatch={
-                      'Changes': [{
-                          'Action': 'UPSERT',
-                          'ResourceRecordSet': {
-                              'Name': os.environ['RECORD_NAME'],
-                              'Type': 'A',
-                              'TTL': 300,
-                              'ResourceRecords': [{'Value': source_ip}]
-                          }
-                      }]
+              try:
+                  route53.change_resource_record_sets(
+                      HostedZoneId=zone_id,
+                      ChangeBatch={
+                          'Changes': [{
+                              'Action': 'UPSERT',
+                              'ResourceRecordSet': {
+                                  'Name': record_name,
+                                  'Type': 'A',
+                                  'TTL': 300,
+                                  'ResourceRecords': [{'Value': source_ip}]
+                              }
+                          }]
+                      }
+                  )
+                  print(f"IP_CHANGED old={current_ip} new={source_ip}")
+              except Exception as e:
+                  print(f"UPDATE_FAILED ip={source_ip} error={e}")
+                  return {
+                      'statusCode': 500,
+                      'body': json.dumps({'error': 'DNS update failed'})
                   }
-              )
 
               return {
                   'statusCode': 200,
                   'body': json.dumps({
                       'message': 'DNS updated',
-                      'record': os.environ['RECORD_NAME'],
+                      'record': record_name,
                       'ip': source_ip
                   })
               }
+
+  # Log group with short retention
+  UpdateFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub '/aws/lambda/${AWS::StackName}-updater'
+      RetentionInDays: 7
 
   # IAM role for Lambda
   LambdaRole:
@@ -138,7 +177,9 @@ Resources:
             Statement:
               - Sid: UpdateRoute53
                 Effect: Allow
-                Action: route53:ChangeResourceRecordSets
+                Action:
+                  - route53:ChangeResourceRecordSets
+                  - route53:ListResourceRecordSets
                 Resource: !Sub 'arn:aws:route53:::hostedzone/${HostedZoneId}'
               - Sid: WriteLogs
                 Effect: Allow
