--- a/templates/dynamic-dns/template.yaml
+++ b/templates/dynamic-dns/template.yaml
@@ -2,15 +2,9 @@ AWSTemplateFormatVersion: '2010-09-09'
 Description: Dynamic DNS updater with Lambda - just curl a URL to update your DNS
 
 Parameters:
-  HostedZoneId:
-    Type: String
-    Description: Route 53 Hosted Zone ID (e.g., Z1234567890ABC)
-    AllowedPattern: ^Z[A-Z0-9]+$
-    ConstraintDescription: Must be a valid Route 53 Hosted Zone ID starting with Z
-
   RecordName:
     Type: String
-    Description: DNS record to update (e.g., home.example.com)
+    Description: Full DNS record to update (e.g., home.example.com)
 
 Resources:
   # Generate a random auth token at deploy time
@@ -70,6 +64,78 @@ Resources:
     Properties:
       ServiceToken: !GetAtt TokenGeneratorFunction.Arn
 
+  # Find the hosted zone ID from the record name
+  ZoneFinderFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: !Sub '${AWS::StackName}-zone-finder'
+      Runtime: python3.12
+      Handler: index.handler
+      Timeout: 10
+      Role: !GetAtt ZoneFinderRole.Arn
+      Tags:
+        - Key: Project
+          Value: aws-easy
+        - Key: Template
+          Value: dynamic-dns
+      Code:
+        ZipFile: |
+          import boto3
+          import cfnresponse
+
+          def handler(event, context):
+              if event['RequestType'] == 'Delete':
+                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {})
+                  return
+
+              record_name = event['ResourceProperties']['RecordName'].rstrip('.')
+              route53 = boto3.client('route53')
+
+              # Try to find matching hosted zone (most specific first)
+              parts = record_name.split('.')
+              for i in range(len(parts) - 1):
+                  domain = '.'.join(parts[i:]) + '.'
+                  zones = route53.list_hosted_zones_by_name(DNSName=domain, MaxItems='1')
+                  for zone in zones.get('HostedZones', []):
+                      if zone['Name'] == domain:
+                          zone_id = zone['Id'].replace('/hostedzone/', '')
+                          cfnresponse.send(event, context, cfnresponse.SUCCESS, {'ZoneId': zone_id})
+                          return
+
+              cfnresponse.send(event, context, cfnresponse.FAILED, {}, reason=f'No hosted zone found for {record_name}')
+
+  ZoneFinderRole:
+    Type: AWS::IAM::Role
+    Properties:
+      Tags:
+        - Key: Project
+          Value: aws-easy
+        - Key: Template
+          Value: dynamic-dns
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Policies:
+        - PolicyName: ListHostedZones
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action: route53:ListHostedZonesByName
+                Resource: '*'
+
+  HostedZone:
+    Type: Custom::HostedZone
+    Properties:
+      ServiceToken: !GetAtt ZoneFinderFunction.Arn
+      RecordName: !Ref RecordName
+
   # Lambda function to update DNS
   UpdateFunction:
     Type: AWS::Lambda::Function
@@ -87,7 +153,7 @@ Resources:
           Value: dynamic-dns
       Environment:
         Variables:
-          HOSTED_ZONE_ID: !Ref HostedZoneId
+          HOSTED_ZONE_ID: !GetAtt HostedZone.ZoneId
           RECORD_NAME: !Ref RecordName
           AUTH_TOKEN: !GetAtt AuthToken.Token
       Code:
@@ -205,7 +271,9 @@ Resources:
                 Action:
                   - route53:ChangeResourceRecordSets
                   - route53:ListResourceRecordSets
-                Resource: !Sub 'arn:aws:route53:::hostedzone/${HostedZoneId}'
+                Resource: !Sub
+                  - 'arn:aws:route53:::hostedzone/${ZoneId}'
+                  - ZoneId: !GetAtt HostedZone.ZoneId
               - Sid: WriteLogs
                 Effect: Allow
                 Action:
