--- a/templates/dynamic-dns/template.yaml
+++ b/templates/dynamic-dns/template.yaml
@@ -7,72 +7,15 @@ Parameters:
     Description: Full DNS record to update (e.g., home.example.com)
 
 Resources:
-  # Generate a random auth token at deploy time
-  TokenGeneratorFunction:
+  # Setup: generate auth token and find hosted zone
+  SetupFunction:
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: !Sub '${AWS::StackName}-token-generator'
+      FunctionName: !Sub '${AWS::StackName}-setup'
       Runtime: python3.12
       Handler: index.handler
       Timeout: 10
-      Role: !GetAtt TokenGeneratorRole.Arn
-      Tags:
-        - Key: Project
-          Value: aws-easy
-        - Key: Template
-          Value: dynamic-dns
-      Code:
-        ZipFile: |
-          import cfnresponse
-          import secrets
-
-          def handler(event, context):
-              if event['RequestType'] == 'Create':
-                  token = secrets.token_urlsafe(24)
-                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {'Token': token})
-              elif event['RequestType'] == 'Update':
-                  # Keep the same token on updates
-                  old_token = event.get('OldResourceProperties', {}).get('Token', '')
-                  if old_token:
-                      cfnresponse.send(event, context, cfnresponse.SUCCESS, {'Token': old_token})
-                  else:
-                      token = secrets.token_urlsafe(24)
-                      cfnresponse.send(event, context, cfnresponse.SUCCESS, {'Token': token})
-              else:
-                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {})
-
-  TokenGeneratorRole:
-    Type: AWS::IAM::Role
-    Properties:
-      Tags:
-        - Key: Project
-          Value: aws-easy
-        - Key: Template
-          Value: dynamic-dns
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: lambda.amazonaws.com
-            Action: sts:AssumeRole
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-
-  AuthToken:
-    Type: Custom::AuthToken
-    Properties:
-      ServiceToken: !GetAtt TokenGeneratorFunction.Arn
-
-  # Find the hosted zone ID from the record name
-  ZoneFinderFunction:
-    Type: AWS::Lambda::Function
-    Properties:
-      FunctionName: !Sub '${AWS::StackName}-zone-finder'
-      Runtime: python3.12
-      Handler: index.handler
-      Timeout: 10
-      Role: !GetAtt ZoneFinderRole.Arn
+      Role: !GetAtt SetupRole.Arn
       Tags:
         - Key: Project
           Value: aws-easy
@@ -82,16 +25,25 @@ Resources:
         ZipFile: |
           import boto3
           import cfnresponse
+          import secrets
 
           def handler(event, context):
               if event['RequestType'] == 'Delete':
                   cfnresponse.send(event, context, cfnresponse.SUCCESS, {})
                   return
 
+              # Generate or preserve token
+              if event['RequestType'] == 'Update':
+                  token = event.get('OldResourceProperties', {}).get('Token', '')
+                  if not token:
+                      token = secrets.token_urlsafe(24)
+              else:
+                  token = secrets.token_urlsafe(24)
+
+              # Find hosted zone
               record_name = event['ResourceProperties']['RecordName'].rstrip('.')
               route53 = boto3.client('route53')
 
-              # Try to find matching hosted zone (most specific first)
               parts = record_name.split('.')
               for i in range(len(parts) - 1):
                   domain = '.'.join(parts[i:]) + '.'
@@ -99,12 +51,15 @@ Resources:
                   for zone in zones.get('HostedZones', []):
                       if zone['Name'] == domain:
                           zone_id = zone['Id'].replace('/hostedzone/', '')
-                          cfnresponse.send(event, context, cfnresponse.SUCCESS, {'ZoneId': zone_id})
+                          cfnresponse.send(event, context, cfnresponse.SUCCESS, {
+                              'Token': token,
+                              'ZoneId': zone_id
+                          })
                           return
 
               cfnresponse.send(event, context, cfnresponse.FAILED, {}, reason=f'No hosted zone found for {record_name}')
 
-  ZoneFinderRole:
+  SetupRole:
     Type: AWS::IAM::Role
     Properties:
       Tags:
@@ -130,10 +85,10 @@ Resources:
                 Action: route53:ListHostedZonesByName
                 Resource: '*'
 
-  HostedZone:
-    Type: Custom::HostedZone
+  Setup:
+    Type: Custom::Setup
     Properties:
-      ServiceToken: !GetAtt ZoneFinderFunction.Arn
+      ServiceToken: !GetAtt SetupFunction.Arn
       RecordName: !Ref RecordName
 
   # Lambda function to update DNS
@@ -153,9 +108,9 @@ Resources:
           Value: dynamic-dns
       Environment:
         Variables:
-          HOSTED_ZONE_ID: !GetAtt HostedZone.ZoneId
+          HOSTED_ZONE_ID: !GetAtt Setup.ZoneId
           RECORD_NAME: !Ref RecordName
-          AUTH_TOKEN: !GetAtt AuthToken.Token
+          AUTH_TOKEN: !GetAtt Setup.Token
       Code:
         ZipFile: |
           import boto3
@@ -273,7 +228,7 @@ Resources:
                   - route53:ListResourceRecordSets
                 Resource: !Sub
                   - 'arn:aws:route53:::hostedzone/${ZoneId}'
-                  - ZoneId: !GetAtt HostedZone.ZoneId
+                  - ZoneId: !GetAtt Setup.ZoneId
               - Sid: WriteLogs
                 Effect: Allow
                 Action:
@@ -331,13 +286,13 @@ Outputs:
     Description: Your update URL (keep this secret!)
     Value: !Sub
       - 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com/update/${Token}'
-      - Token: !GetAtt AuthToken.Token
+      - Token: !GetAtt Setup.Token
 
   CronCommand:
     Description: Add this line to your crontab to update every 5 minutes
     Value: !Sub
       - '*/5 * * * * curl -s "https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com/update/${Token}"'
-      - Token: !GetAtt AuthToken.Token
+      - Token: !GetAtt Setup.Token
 
   RecordName:
     Description: DNS record being updated
