Add DeletionPolicy: Retain to S3 buckets

--- a/templates/static-website/template.yaml
+++ b/templates/static-website/template.yaml
@@ -13,6 +13,7 @@ Conditions:
 Resources:
   WebsiteBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       Tags:
         - Key: Project
